Remove CSS class who caused long loading on Firefox Fix #2302 #2281

--- a/app/Resources/static/themes/material/css/main.css
+++ b/app/Resources/static/themes/material/css/main.css
@@ -352,7 +352,6 @@ main ul.row {
 .card .card-content .card-title {
   line-height: 32px;
   max-height: 64px;
-  display: block;
 }
 
 .card .card-content i.right, .card .card-reveal i.right {
